Fix footer p causing horizontal scroll in mobile view

--- a/styles/main.css
+++ b/styles/main.css
@@ -25,7 +25,7 @@ footer h1{
 }
 footer p{
     padding: 5vw;
-    width: 100%;
+    width: 80%;
 }
 main{
     text-align: center;
@@ -100,7 +100,7 @@ h1, h2, h3, h4, h5, h6{
     text-align: center;
 }
 .footerImage{
-
+    margin: 0; padding: 0;
     width: 100%;
 }
 .filter-white{
